crates/daemon/tests/snapshots/gateway_config__config_renderers_quote_path_tokens_with_spaces.snap
---
source: crates/daemon/tests/gateway_config.rs
expression: "format!(\"Gateway:\\n{gateway}\\nWorker:\\n{worker}\")"
---
Gateway:
{
    admin "unix//Users/Alice Smith/.pv/run/gateway-admin.sock|0600"
    persist_config off
    log {
        output file "/Users/Alice Smith/.pv/logs/gateway/error.log" {
            roll_size 10MiB
            roll_uncompressed
            roll_keep 5
            roll_keep_for 720h
        }
        format json
    }
    storage file_system {
        root "/Users/Alice Smith/.pv/certificates/caddy"
    }
    http_port 48080
    https_port 48443
    pki {
        ca local {
            root {
                format pem_file
                cert "/Users/Alice Smith/.pv/certificates/ca.pem"
                key "/Users/Alice Smith/.pv/certificates/ca-key.pem"
            }
        }
    }
}

http://pv-gateway.localhost {
    bind 127.0.0.1
    log {
        output file "/Users/Alice Smith/.pv/logs/gateway/access.log" {
            roll_size 10MiB
            roll_uncompressed
            roll_keep 5
            roll_keep_for 720h
        }
        format json
    }
    respond /__pv/health "pv-gateway-health-v1:48080:48443" 200
}

https://pv-gateway.localhost {
    bind 127.0.0.1
    log {
        output file "/Users/Alice Smith/.pv/logs/gateway/access.log" {
            roll_size 10MiB
            roll_uncompressed
            roll_keep 5
            roll_keep_for 720h
        }
        format json
    }
    tls {
        issuer internal {
            ca local
        }
    }
    respond /__pv/health "pv-gateway-health-v1:48080:48443" 200
}

import "/Users/Alice Smith/.pv/config/gateway/projects/*.Caddyfile"

Worker:
{
    admin "unix//Users/Alice Smith/.pv/run/worker-admin-163c820d9576.sock|0600"
    persist_config off
}

import "/Users/Alice Smith/.pv/config/workers/php-8.4/projects/*.Caddyfile"
