crates/daemon/tests/snapshots/gateway_config__gateway_config_renderer_imports_project_configs_when_requested.snap
---
source: crates/daemon/tests/gateway_config.rs
expression: render_gateway_config(&input)?
---
# PV_FAKE_PORT 48080
{
    admin off
    storage file_system {
        root "/Users/alice/.pv/certificates/caddy"
    }
    http_port 48080
    https_port 48443
    pki {
        ca local {
            root {
                format pem_file
                cert "/Users/alice/.pv/certificates/ca.pem"
                key "/Users/alice/.pv/certificates/ca-key.pem"
            }
        }
    }
}

http://pv-gateway.localhost {
    bind 127.0.0.1 ::1
    respond /__pv/health "pv-gateway-health-v1" 200
}

https://pv-gateway.localhost {
    bind 127.0.0.1 ::1
    tls {
        issuer internal {
            ca local
        }
    }
    respond /__pv/health "pv-gateway-health-v1" 200
}

import "/Users/alice/.pv/config/gateway/projects/*.Caddyfile"
