crates/daemon/tests/snapshots/gateway_config__gateway_config_renderer_outputs_gateway_caddyfile.snap
---
source: crates/daemon/tests/gateway_config.rs
expression: rendered
---
{
    admin "unix//Users/alice/.pv/run/gateway-admin.sock|0600"
    persist_config off
    log {
        output file "/Users/alice/.pv/logs/gateway/error.log" {
            roll_size 10MiB
            roll_uncompressed
            roll_keep 5
            roll_keep_for 720h
        }
        format json
    }
    storage file_system {
        root "/Users/alice/.pv/certificates/caddy"
    }
    http_port 48080
    https_port 48443
    pki {
        ca local {
            root {
                format pem_file
                cert "/Users/alice/.pv/certificates/ca.pem"
                key "/Users/alice/.pv/certificates/ca-key.pem"
            }
        }
    }
}

http://pv-gateway.localhost {
    bind 127.0.0.1
    log {
        output file "/Users/alice/.pv/logs/gateway/access.log" {
            roll_size 10MiB
            roll_uncompressed
            roll_keep 5
            roll_keep_for 720h
        }
        format json
    }
    respond /__pv/health "pv-gateway-health-v1:48080:48443" 200
}

https://pv-gateway.localhost {
    bind 127.0.0.1
    log {
        output file "/Users/alice/.pv/logs/gateway/access.log" {
            roll_size 10MiB
            roll_uncompressed
            roll_keep 5
            roll_keep_for 720h
        }
        format json
    }
    tls {
        issuer internal {
            ca local
        }
    }
    respond /__pv/health "pv-gateway-health-v1:48080:48443" 200
}

import "/Users/alice/.pv/config/gateway/projects/*.Caddyfile"
