crates/daemon/tests/snapshots/gateway_config__gateway_project_config_renderer_outputs_project_caddyfile.snap
---
source: crates/daemon/tests/gateway_config.rs
expression: render_gateway_project_config(&route)?
---
acme.test, *.acme.test {
    bind 127.0.0.1
    log {
        output file "/Users/alice/.pv/logs/gateway/access.log" {
            roll_size 10MiB
            roll_uncompressed
            roll_keep 5
            roll_keep_for 720h
        }
        format json
    }
    tls {
        issuer internal {
            ca local
        }
    }
    reverse_proxy 127.0.0.1:45001 {
        header_up Host {host}
        header_up X-Forwarded-Host {host}
        header_up X-Forwarded-Proto {scheme}
        header_up X-Forwarded-For {remote_host}
    }
}
