crates/daemon/tests/snapshots/gateway_config__worker_config_renderer_outputs_track_caddyfile.snap
---
source: crates/daemon/tests/gateway_config.rs
expression: rendered
---
{
    admin "unix//Users/alice/.pv/run/worker-admin-163c820d9576.sock|0600"
    persist_config off
}

import "/Users/alice/.pv/config/workers/php-8.4/projects/*.Caddyfile"
