crates/daemon/tests/snapshots/gateway_config__worker_project_config_renderer_outputs_project_caddyfile.snap
---
source: crates/daemon/tests/gateway_config.rs
expression: "render_php_worker_project_config(&project, 45001)?"
---
http://acme.test:45001, http://*.acme.test:45001 {
    bind 127.0.0.1
    root * "/Users/alice/Code/acme/public"
    php_server
    file_server
}
